# BdUI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  xmake.lua
Test/: CMakeLists.txt  try.cpp
cmake/: Vulkan-Header.cmake
include/: attribute.hpp  character.hpp  delegate.hpp  error.hpp  event.hpp  image.hpp  log.hpp  pch.h  pch.hpp  readonly.hpp  renderer.hpp  resource.hpp  simplelink.hpp  timer.hpp  ui.hpp  ui_object.hpp  window.hpp
include/OpenGL/glad/: glad.h  glad_glx.h
include/attribute/: attribute.hpp  attribute_vector.hpp
include/glad/: glad.h  glad_wgl.h
include/graph/: color.hpp  point.hpp  shape.hpp  size.hpp  unit.hpp
include/hardware/: keyboard.hpp  monitor.hpp  mouse.hpp
include/malloc/: reference.hpp
include/math/: bezier.hpp  function.hpp  meta.hpp
include/resource/: bitmap.hpp  cursor.hpp  fonttype.hpp  icon.hpp  menu.hpp  popmenu.hpp  resource.hpp
include/resource/image/: cursor.hpp  icon.hpp  image.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glad_wgl/: CmakeLists.txt
lib/glad_wgl/include/glad/: glad_wgl.h
lib/glad_wgl/src/: glad_wgl.c
module/hardware/: cpu.cppm
src/: character.cpp  glad.c  glad_glx.c  glad_wgl.c  image.cpp  log.cpp  pch.cpp  readonly.cpp  renderer.cpp  resource.cpp  ui.cpp  ui_object.cpp  window.cpp
src/graph/: color.cpp  point.cpp  shape.cpp  size.cpp  unit.cpp
src/hardware/: keyboard.cpp  monitor.cpp
src/math/: bezier.cpp  function.cpp  math.ixx  meta.cpp  number.ixx  operation.ixx
src/math/algorithm/: algorithm.ixx  pow.ixx
src/resource/: bitmap.cpp  cursor.cpp  fonttype.cpp  icon.cpp  image.cpp  menu.cpp  popmenu.cpp  resource.cpp
src/resource/image/: cursor.cpp  icon.cpp  image.cpp
src/ui/: ui.cpp  ui_default.cpp
src/unit/: basic_unit.ixx  dimension.ixx  literal.ixx  metric_prefix.ixx  type.ixx  unit.cpp  unit.ixx
src/window/: window.cpp  window_defaultset.cpp  window_event.cpp  window_opengl_loader.cpp  window_render.cpp  window_thread.cpp
test/: test.cpp
